Fix spacing on high low temps in current weather

--- a/src/css/CurrentWeather.css
+++ b/src/css/CurrentWeather.css
@@ -8,11 +8,12 @@
   margin: auto;
   font-family: "Raleway", sans-serif;
   background-color: #f8f8ff;
-  margin-bottom: 1rem;
+  margin-bottom: 0.3rem;
 }
 
 .location {
   font-size: 1.5rem;
+  margin-bottom: 0;
 }
 
 .weather-icon {
@@ -25,4 +26,5 @@ h3,
 p {
   color: black;
   font-size: 1rem;
+  margin-bottom: 0;
 }
