--- a/src/css/TenDay.css
+++ b/src/css/TenDay.css
@@ -2,7 +2,8 @@
   font-size: 2rem;
   color: white;
   font-family: "Raleway", sans-serif;
-  margin-top: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .tenDayCard {
